Update to latest API changes, cleanup licensing

--- a/debian/changelog
+++ b/debian/changelog
@@ -2,4 +2,4 @@ nymea-plugin-knx (0.0.1) xenial; urgency=medium
 
   * Initial release.
 
- -- Simon Stürz <simon.stuerz@guh.io>  Mon, 21 Aug 2017 10:12:00 +0000
+ -- Simon Stürz <simon.stuerz@nymea.io>  Mon, 21 Aug 2017 10:12:00 +0000
