--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+nymea-plugin-knx (0.0.2) UNRELEASED; urgency=medium
+
+  * Add to nymea release process
+
+ -- Michael Zanetti <michael.zanetti@guh.io>  Fri, 13 Mar 2020 11:44:02 +0100
+
 nymea-plugin-knx (0.0.1) xenial; urgency=medium
 
   * Initial release.
