No change rebuild

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,8 @@
+nymea-plugin-knx (0.0.5) UNRELEASED; urgency=medium
+
+
+ -- Michael Zanetti <michael.zanetti@nymea.io>  Tue, 01 Sep 2020 12:56:51 +0200
+
 nymea-plugin-knx (0.0.4) xenial; urgency=medium
 
   [ Bernhard Trinnes ]
