--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,8 @@
+nymea-plugin-knx (0.0.6) UNRELEASED; urgency=medium
+
+
+ -- Michael Zanetti <michael.zanetti@nymea.io>  Wed, 23 Dec 2020 15:10:49 +0100
+
 nymea-plugin-knx (0.0.5) xenial; urgency=medium
 
   [ Michael Zanetti ]
